<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_ip"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_destination_ip"
            android:layout_width="20dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:ems="10"
            android:hint="@string/input_ip" />

    </LinearLayout>

     <EditText
        android:id="@+id/et_unicast_send_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/input_contents" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_unicast_send"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send" 
        android:layout_gravity="center"
        />

</LinearLayout>
